sigtest fixes for java modules